--- a/package.json
+++ b/package.json
@@ -1,45 +1,7 @@
 {
   "title": "Prashant Kurlekar",
   "name": "prashant-kurlekar",
-  "version": "4.1.1",
-  "description": "Prashant Kurlekar",
-  "keywords": [
-    "css",
-    "sass",
-    "html",
-    "responsive",
-    "theme",
-    "template"
-  ],
+  "version": "2.0.0",
   "homepage": "https://www.prashantkurlekar.com",
-  "bugs": {
-    "url": "https://github.com/prashantkurlekar/",
-    "email": "prashantkurlekar@gmail.com"
-  },
-  "license": "MIT",
-  "author": "Prashant Kurlekar",
-  "contributors": [
-    "Prashant Kurlekar"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/prashantkurlekar/"
-  },
-  "dependencies": {
-    "bootstrap": "^4.1.2",
-    "font-awesome": "4.7.0",
-    "jquery": "3.3.1",
-    "jquery.easing": "^1.4.1",
-    "magnific-popup": "^1.1.0"
-  },
-  "devDependencies": {
-    "browser-sync": "2.24.6",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "3.9.4",
-    "gulp-filter": "5.1.0",
-    "gulp-header": "2.0.5",
-    "gulp-rename": "^1.3.0",
-    "gulp-sass": "4.0.1",
-    "gulp-uglify": "3.0.0"
-  }
+  "author": "Prashant Kurlekar"
 }
